c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/invalid_static_initializer.c
/* It's illegal to initialize a static pointer with a non-pointer value */
static int *x = 10;

int main(void) {
    return 0;
}